# polyamorous

./: .gitignore  AGENTS.md  AUTONOMOUS_TRADING_LIVE.md  AUTOPILOT_QUICK_START.md  AUTOPILOT_READY.md  AUTOPILOT_RUNNING.md  AUTOPILOT_SETUP.md  AUTOPILOT_STATUS_NOW.md  BALANCE_FIX.md  BUILD_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DATABASE_RESET.md  ENHANCEMENTS.md  FINAL_IMPLEMENTATION_STATUS.md  FINAL_STATUS.md  FINAL_SUMMARY.md  GROUP_RESEARCH_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LAUNCH.md  LONGSHOT_SAFEGUARDS.md  MULTI_OUTCOME_MARKETS_DONE.md  PHASE2_IMPLEMENTATION.md  POLYMARKET_SETUP_GUIDE.md  PORTFOLIO_OPTIMIZATION.md  POSITIONS_ENTERED.md  QUICKSTART.md  README.md  RESEARCH_OPTIMIZATION_COMPLETE.md  RESEARCH_PROGRESS_FIX.md  SESSION_COMPLETE.md  SETUP.md  STATUS.md  TRADING_STATUS.md  check_autopilot.sh  polly-autopilot.service  prd.md  pyproject.toml  requirements.txt  run.sh  (+3 more)
data/: sample_markets.json
docs/: grok-agentic-guide.md  plan.md  polymarket-client-guide.md  textual-guide.md
pm_analyst/: cli.py  config.py  logging.py
pm_analyst.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pm_analyst/models/: db.py
pm_analyst/services/: calculations.py  persistence.py  polymarket.py  research.py  workflows.py
pm_analyst/tui/: __init__.py  app.py  poly.tcss  views.py
pm_analyst/utils/: paths.py
polly/: __init__.py  __main__.py  cli.py  config.py  db.py  logging.py  models.py  utils.py
polly/autopilot/: __init__.py  __main__.py  logging_config.py  scanner.py  service.py  wallet.py
polly/commands/: __init__.py  autopilot.py  help.py  history.py  polls.py  portfolio.py  research.py  trade.py
polly/services/: __init__.py  evaluator.py  (+8 more)
poly/: __init__.py  app.py  cli.py  config.py  models.py
poly_legacy/: __main__.py  app.py  config.py  messages.py  models.py  utils.py
scripts/: research_smoke.py
(+35 files in other folders)
