[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-analyst"
version = "0.1.0"
description = "CLI market analyst for Polymarket with Grok agentic research"
authors = [{name = "Polyamorous"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer[all]>=0.9.0",
  "rich>=13.7.0",
  "textual>=0.38.1",
  "httpx>=0.26.0",
  "pydantic>=2.5.0",
  "sqlmodel>=0.0.14",
  "tenacity>=8.2.3",
  "pyyaml>=6.0.0"
]

[project.optional-dependencies]
develop = [
  "pytest>=7.4",
  "ruff>=0.3.0"
]

[project.scripts]
pm = "pm_analyst.cli:app"
