[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polly"
version = "0.1.0"
description = "Command-Based Polymarket Research & Paper Trading"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "py-clob-client>=0.20.0",
    "requests>=2.32.0",
    "xai-sdk>=0.1.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
polly = "polly.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["polly*"]
